...
                startDateTime: dateWithTime("12:00", onDay: date),
                endDateTime: dateWithTime("13:00", onDay: date),
                location: nil,
                timezone: nil,
                isAllDay: false),
            event(
                name: "Meeting",
                startDateTime: dateWithTime("12:30", onDay: date),
                endDateTime: dateWithTime("14:00", onDay: date),
                location: nil,
                timezone: nil,
                isAllDay: false),
            event(
...
        ]
    }

    static func wednesday(_ date: Date) -> [TCNEvent] {
        return [
            event(
                name: "Eat breakfast cookies",
                startDateTime: dateWithTime("8:00", onDay: date),
                endDateTime: dateWithTime("9:00", onDay: date),
                location: nil,
                timezone: nil,
                isAllDay: false),
            event(
...
